# pgen-templates

./: cmake-mp-exe.yaml  cmake-mp-lib.yaml  cmake-mp-root.yaml  cpp-cmake-exe.toml  cpp-exe-cmake-snitch.toml  cpp-exe.toml  cpp-lib-cmake-snitch.toml  cpp-lib-snitch.json  cpp-lib-snitch.yaml  cpp-lib-xmake-snitch.toml  cpp-lib.json  cpp-lib.toml  update-templates.ps1
cpp-lib-snitch/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cpp-lib-snitch/cmake/: compile-options.cmake  install-config.cmake  install-rules.cmake
cpp-lib-snitch/include/{@ namespace @}/: {@ project_name @}.hpp
cpp-lib-snitch/src/: {@ project_name @}.cpp
cpp-lib-snitch/tests/: CMakeLists.txt
cpp-lib-snitch/tests/src/: fake_tests.cpp  {@ project_name @}_tests.cpp
